Kubernetes/Testing/00-namespace-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    env: testing
    team: ptincatering
