Kubernetes/Testing/03-deploy-back-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptin-back
  namespace: testing
spec:
  selector:
    matchLabels:
      app: ptin-back-app
  template:
    metadata:
      labels:
        app: ptin-back-app
    spec:
      containers:
      - name: ptin-back-app
        image: asierhr/catering-back-test:v2.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
          limits:
            memory: "600Mi"
            cpu: "500m"
