Kubernetes/Testing/04-backService-test-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptin-back-test-nodeport
  namespace: testing
spec:
  type: NodePort
  selector:
    app: ptin-back-app
  ports:
    - port: 8080
      targetPort: 8080
