Kubernetes/Testing/04-backService-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptin-back
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: ptin-back-app
  ports:
    - port: 8080
      targetPort: 8080
