Kubernetes/Testing/04-frontService-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptin-front
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: ptin-front-app
  ports:
    - port: 80
      targetPort: 80
