Kubernetes/Testing/04-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: testing
spec:
  rules:
  - host: ptincatering-test.me
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ptin-back
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ptin-front
            port:
              number: 80
